--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-fa": "^1.0.2",
+    "@iconify/react": "^1.1.3",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   }
 }
