hooked up authentication and PostList to feathers api

--- a/feathers/package.json
+++ b/feathers/package.json
@@ -25,11 +25,12 @@
   },
   "scripts": {
     "test": "npm run lint && npm run jest",
+    "coverage": "nyc npm run jest",
     "lint": "standard",
     "dev": "nodemon src/",
     "start": "node src/",
     "clean": "shx rm test/test.db",
-    "jest": "npm run clean && SET NODE_ENV=test& jest --watch"
+    "jest": "npm run clean && SET NODE_ENV=test& jest"
   },
   "standard": {
     "env": [
@@ -59,9 +60,11 @@
   "devDependencies": {
     "axios": "^0.19.2",
     "feathers-hooks-common": "^5.0.2",
+    "feathers-memory": "^4.1.0",
     "jest": "^25.3.0",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
+    "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "standard": "^14.3.3"
   }
