--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-sass": "^4.13.1",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "standard": "^14.3.3"
   }
 }
