--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@iconify/icons-fa": "^1.0.2",
     "@iconify/react": "^1.1.3",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
+    "pluralize": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
     "socket.io-client": "^2.3.0",
